--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -3,4 +3,38 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if(products){ %>
+                <div class="grid">
+                <% for(let product of products){ %>
+                    <article class="card product-item">
+                        <header class="card__header">
+                            <h1 class="product__title">
+                                <%= product.productData.title %>
+                            </h1>
+                        </header>
+                        <div class="card__image">
+                            <img src="<%= product.productData.image %>" alt="<%= product.productData.title %>">
+                        </div>
+                        <div class="card__content">
+                            <h2 class="product__price">$
+                                <%= product.productData.price %>
+                            </h2>
+                            <p class="product__description">
+                                Quantity: <%= product.qty %>
+                            </p>
+                        </div>
+                        <div class="card__actions">
+                            <form action="/cart-product-delete" method="POST">
+                                <input type="hidden" name="productId" value="<%= product.productData.id %>">
+                                <button type="submit" class="btn">Delete from Cart</button>
+                            </form>
+                        </div>
+                    </article>
+                <% } %> 
+                </div>  
+            <% }else{ %>
+                <h1>No Items in Cart</h1>
+            <% } %>
+        </main>
         <%- include('../includes/end.ejs') %>
