--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -10,29 +10,34 @@
                     <article class="card product-item">
                         <header class="card__header">
                             <h1 class="product__title">
-                                <%= product.productData.title %>
+                                <%= product.title %>
                             </h1>
                         </header>
                         <div class="card__image">
-                            <img src="<%= product.productData.image %>" alt="<%= product.productData.title %>">
+                            <img src="<%= product.image %>" alt="<%= product.title %>">
                         </div>
                         <div class="card__content">
                             <h2 class="product__price">$
-                                <%= product.productData.price %>
+                                <%= product.price %>
                             </h2>
                             <p class="product__description">
-                                Quantity: <%= product.qty %>
+                                Quantity: <%= product.carts[0]['cart-item'].qty %>
                             </p>
                         </div>
                         <div class="card__actions">
                             <form action="/cart-product-delete" method="POST">
-                                <input type="hidden" name="productId" value="<%= product.productData.id %>">
+                                <input type="hidden" name="productId" value="<%= product.id %>">
                                 <button type="submit" class="btn">Delete from Cart</button>
                             </form>
                         </div>
                     </article>
                 <% } %> 
-                </div>  
+                </div> 
+                <div class="centered" style="margin-top: 2%">
+                    <form action="/create-order" method="POST">
+                        <button type="submit" class="btn">Order Now</button>
+                    </form>
+                </div> 
             <% }else{ %>
                 <h1>No Items in Cart</h1>
             <% } %>
